Build: don't use `MaxMetaspaceSize` for Java 7